--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,3 +5,12 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
+
+/* Your custom overrides below */
+body {
+    font-family: Arial, sans-serif;
+}
+
+h1, h2, h3 {
+    color: #004080; /* Custom heading color */
+}
