--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "minima/skins/{{ site.minima.skin | default: 'classic' }}",
+@import "minima/skins/{{ site.minima.skin | default: 'classic' }}";
 @import "minima/initialize";
 
 /* Your custom overrides below */
